restructured files; fixed title width to look better on iOS

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,7 +12,6 @@
 /* ROOT */
 
 /* ROOT */
-
 :root {
     width: 100%;
     height: 100%;
@@ -94,13 +93,15 @@ input[type="checkbox"] {
 }
 
 .title {
-    width: 100%;
+    width: calc(100% - 2rem);
+    padding: 0 $padding-minimal;
     font-size: $font-size-title;
     text-align: center;
 }
 
 .subtitle {
-    width: 100%;
+    width: calc(100% - 2rem);
+    padding: 0 $padding-minimal;
     font-size: $font-size-heading;
     text-align: center;
 }
@@ -209,7 +210,7 @@ input[type="checkbox"] {
 .explanation {
     @include center-x(absolute);
     top: 0;
-    width: 90rem;
+    width: 100%;
     height: 13.75rem;
     padding-bottom: $padding-maximal;
 }
